--- a/css/gui.css
+++ b/css/gui.css
@@ -9,6 +9,11 @@ header h1 {
     display:inline;
 }*/
 
+button {
+    height: 50px;
+    border-radius: 5px 5px;
+}
+
 footer {
     margin-top: 5px;
 }
@@ -22,6 +27,7 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
+    font-size: 15pt;
 }
 
 .parFichaje {
@@ -29,6 +35,7 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
+    font-size: 15pt;
 }
 
 .horasFichaje {
@@ -36,6 +43,7 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
+    font-size: 15pt;
 }
 
 #fichajesSemanalCotenedor {
