--- a/css/gui.css
+++ b/css/gui.css
@@ -9,6 +9,14 @@ header h1 {
     display:inline;
 }*/
 
+body {
+    font-size: 15pt;
+}
+
+input {
+    font-size: 15pt;
+}
+
 button {
     height: 50px;
     border-radius: 5px 5px;
@@ -27,7 +35,6 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
-    font-size: 15pt;
 }
 
 .parFichaje {
@@ -35,7 +42,6 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
-    font-size: 15pt;
 }
 
 .horasFichaje {
@@ -43,7 +49,6 @@ footer {
     border-radius: 5px 5px;
     padding: 2px;
     margin: 2px;
-    font-size: 15pt;
 }
 
 #fichajesSemanalCotenedor {
