--- a/css/gui.css
+++ b/css/gui.css
@@ -1,15 +1,4 @@
-﻿/*header {
-    border: solid 1px red;
-}
-
-header h1 {
-    margin-left: auto;
-    margin-right: auto;
-    border: solid 1px black;
-    display:inline;
-}*/
-
-body {
+﻿body {
     margin: 5px;
     font-size: 15pt;
 }
@@ -60,7 +49,7 @@ h3 {
 }*/
 
 .etiqueta-ajuste {
-    padding: 5px;
+    padding: 8px;
     margin-right: 5px;
 }
 
